# obsidian-agent

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  obsidian_agent_ARCHITECTURE.md  obsidian_agent_engineering_prd.md  obsidian_agent_prd.md  pyproject.toml
.claude/: mcp.json
config/: .env.example  config.yaml.example
docs/: use_cases.md
docs/issues/: 1-1_config.md  1-2_logging.md  1-3_vault-reader-parser.md  1-4_duckdb-schema-store.md  1-5_index-builder.md  1-6_cli-index-status.md  10-1_docs-semantic-throttling-alignment.md  10-2_worker-is-error-handling.md  10-3_cron-command-quoting-and-logging.md  10-4_entity-context-and-semantic-backfill.md  10-5_wikilink-normalization-and-link-correctness.md  10-6_smtp-delivery-hardening.md  10_fix-hardening-and-alignment.md  (+42 more)
obsidian_agent/: cli.py  config.py  context.py  cron.py  logging_utils.py  outputs.py
scripts/: codex_spike_11_4.sh
tests/: test_agent_backend.py  test_agent_factory.py  test_build_index.py  test_chunker.py  test_cli_agent_test.py  test_cli_promote.py  test_codex_worker.py  test_concept_extraction.py  test_config.py  test_cron.py  test_embedder.py  test_feed_tool.py  test_mcp_integration.py  test_mcp_semantic_tools.py  test_mcp_tools.py  test_outputs.py  test_parser.py  test_promoter.py  test_readwise_client.py  test_readwise_formatter.py  test_readwise_ingestion.py  test_registry.py  test_research_digest.py  test_semantic_index.py  test_semantic_queries.py  test_smtp.py  test_store.py  test_task_notification.py  test_vault_connections_report.py  test_vault_hygiene_report.py  test_worker.py
(+59 files in other folders)
