[project]
name = "obsidian-agent"
version = "0.1.0"
description = "Scheduled automation framework for Obsidian vaults"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "mcp>=1.0",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
obsidian-agent = "obsidian_agent.cli:app"

[tool.setuptools.packages.find]
include = ["obsidian_agent*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
